--- a/UtopiaCity/Views/SportComplex/Create.cshtml
+++ b/UtopiaCity/Views/SportComplex/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportComplex
+﻿@model SportComplexViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="input-group mb-3">
-                <label asp-for="Title" class="input-group-text"></label>
-                <input type="text" asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="SportComplexTitle" class="input-group-text"></label>
+                <input type="text" asp-for="SportComplexTitle" class="form-control" />
+                <span asp-validation-for="SportComplexTitle" class="text-danger"></span>
             </div>
             <div class="input-group mb-3">
                 <label asp-for="NumberOfSeats" class="input-group-text"></label>
