--- a/UtopiaCity/Views/SportEvent/Details.cshtml
+++ b/UtopiaCity/Views/SportEvent/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportComplexEventViewModel
+﻿@model SportEventViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -13,34 +13,34 @@
         <div class="col">
             <dl class="row">
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.SportEvent.Title)
+                    @Html.DisplayNameFor(model => model.SportEventTitle)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.SportEvent.Title)
+                    @Html.DisplayFor(model => model.SportEventTitle)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.SportEvent.DateOfTheEvent)
+                    @Html.DisplayNameFor(model => model.DateOfTheEvent)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.SportEvent.DateOfTheEvent)
+                    @Html.DisplayFor(model => model.DateOfTheEvent)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.SportComplex.Title)
+                    @Html.DisplayNameFor(model => model.SportComplexTitle)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.SportComplex.Title)
+                    @Html.DisplayFor(model => model.SportComplexTitle)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.SportComplex.Address)
+                    @Html.DisplayNameFor(model => model.Address)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.SportComplex.Address)
+                    @Html.DisplayFor(model => model.Address)
                 </dd>
             </dl>
         </div>
     </div>
 </div>
 <div>
-    <a class="btn btn-outline-primary" role="button" asp-action="Edit" asp-route-id="@Model.SportEvent.SportEventId">Edit</a> |
+    <a class="btn btn-outline-primary" role="button" asp-action="Edit" asp-route-id="@Model.SportEventId">Edit</a> |
     <a class="btn btn-outline-secondary" role="button" asp-action="AllSportEvents">Back to List</a>
 </div>
