fixed Bug with the travel time; fixed FlightViews; fixed data-transfer problem for FlightCreateView;

--- a/UtopiaCity/Views/Flight/FlightDetailsView.cshtml
+++ b/UtopiaCity/Views/Flight/FlightDetailsView.cshtml
@@ -17,6 +17,12 @@
             @Html.DisplayFor(model => model.FlightNumber)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LocationPoint)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LocationPoint)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DestinationPoint)
         </dt>
         <dd class="col-sm-10">
@@ -33,6 +39,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DepartureTime)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TypeOfAircraft)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TypeOfAircraft)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Weather)
