--- a/UtopiaCity/Views/Flight/FlightCreateView.cshtml
+++ b/UtopiaCity/Views/Flight/FlightCreateView.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TypeOfAircraft" class="control-label"></label>
-                <select asp-for="TypeOfAircraft" class="form-control" asp-items="ViewBag.PlaneTypes"></select>
+                <select asp-for="TypeOfAircraft" class="form-control" asp-items="ViewBag.TypeOfAircraft"></select>
                 <span asp-validation-for="TypeOfAircraft" class="text-danger"></span>
             </div>
             <div class="form-group">
