--- a/UtopiaCity/Views/Flight/FlightDeleteView.cshtml
+++ b/UtopiaCity/Views/Flight/FlightDeleteView.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.FlightNumber)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LocationPoint)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LocationPoint)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DestinationPoint)
         </dt>
         <dd class="col-sm-10">
