--- a/UtopiaCity/Views/_ViewImports.cshtml
+++ b/UtopiaCity/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using UtopiaCity.Models
 @using UtopiaCity.Models.Sport
 @using UtopiaCity.Models.Sport.Enums
+@using UtopiaCity.ViewModels.Sport;
 @using UtopiaCity.Models.Airport.TransportManagerSystem.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
