--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Create.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Create.cshtml
@@ -1,7 +1,6 @@
-﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
+﻿@model ResidentAccount
 
 @{
-    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Create";
 }
 
