--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Edit.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Edit.cshtml
@@ -1,7 +1,6 @@
-﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
+﻿@model ResidentAccount
 
 @{
-    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Edit";
 }
 
@@ -14,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="MarriageId" />
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
