--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Index.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@model IEnumerable<UtopiaCity.Models.CityAdministration.RersidentAccount>
+﻿@model IEnumerable<ResidentAccount>
 
 @{
-    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Residents Accounts";
 }
 
