--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Details.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Details.cshtml
@@ -1,7 +1,6 @@
-﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
+﻿@model ResidentAccount
 
 @{
-    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Details";
 }
 
@@ -11,29 +10,43 @@
     <h4>Account</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FamilyName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FamilyName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.BirthDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Gender)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Gender)
+        </dd>
+        <dt class="col-sm-2">
+            Marriage
+        </dt>
+        <dd class="col-sm-10">
+            @{string person = Model.Marriage?.FirstPersonId == Model.Id ? Model.Marriage?.SecondPersonData ?? "No" : Model.Marriage?.FirstPersonData ?? "No";}
+            @person
+        </dd>
+        <dt class="col-sm-2">
+            Date
+        </dt>
+        <dd class="col-sm-10">
+            @{string date = Model.Marriage?.MarriageDate.ToShortDateString() ?? "No";}
+            @date
         </dd>
     </dl>
 </div>
