Refactoring in Marriage controller

--- a/UtopiaCity/Views/CityAdministration/Marriage/Create.cshtml
+++ b/UtopiaCity/Views/CityAdministration/Marriage/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstPersonId" class="control-label">Husband</label>
+                <label asp-for="FirstPersonId" class="control-label">First Person</label>
                 <select asp-for="FirstPersonId" class="form-control">
                     @foreach (var item in Model.ResidentAccounts.Where(a => (a.Gender == "Male") && (a.MarriageId == null)))
                     {
@@ -23,7 +23,7 @@
                 <span asp-validation-for="FirstPersonId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SecondPersonId" class="control-label">Wife</label>
+                <label asp-for="SecondPersonId" class="control-label">Second Person</label>
                 <select asp-for="SecondPersonId" class="form-control">
                     @foreach (var item in Model.ResidentAccounts.Where(a => (a.Gender == "Female") && (a.MarriageId == null)))
                     {
