Small fixed Vacancy index view

--- a/UtopiaCity/Views/Vacancy/Index.cshtml
+++ b/UtopiaCity/Views/Vacancy/Index.cshtml
@@ -34,7 +34,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Profession.Id)
+                @Html.DisplayFor(modelItem => item.Profession.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Salary)
@@ -46,11 +46,10 @@
                 @Html.DisplayFor(modelItem => item.Discription)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Company.Id)
+                @Html.DisplayFor(modelItem => item.Company.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
