--- a/UtopiaCity/Views/ResidentAccount/Index.cshtml
+++ b/UtopiaCity/Views/ResidentAccount/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UtopiaCity.Models.CityAdministration.RersidentAccount>
+﻿@model IEnumerable<UtopiaCity.Models.CityAdministration.ResidentAccount>
 
 @{
     ViewData["Title"] = "Index";
