--- a/UtopiaCity/Views/ResidentAccount/Edit.cshtml
+++ b/UtopiaCity/Views/ResidentAccount/Edit.cshtml
@@ -1,17 +1,18 @@
-﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
+﻿@model UtopiaCity.Models.CityAdministration.ResidentAccount
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
-<h4>RersidentAccount</h4>
+<h4>ResidentAccount</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -35,7 +36,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
