--- a/UtopiaCity/Views/Home/Index.cshtml
+++ b/UtopiaCity/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+@{
+    ViewData["Title"] = "HomePageMessage";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">@Localizer["HomePageMessage"]</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
