--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="EmergencyReport" asp-action="Index">Emergency Reports</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sport" asp-action="Index">Sport</a>
                         </li>
                         <li class="nav-item">
@@ -48,6 +48,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Life" asp-action="Index">Life</a>
+                        </li>
+                        <li class="nav-item">*@
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmergencyReportPartial" asp-action="Index">BIG TEST VALUE</a>
                         </li>
                         <li class="nav-item">
 
