--- a/UtopiaCity/Views/SportEvent/AllSportEvents.cshtml
+++ b/UtopiaCity/Views/SportEvent/AllSportEvents.cshtml
@@ -40,7 +40,15 @@
                 <td>
                     <a class="btn btn-outline-success btn-sm" role="button" asp-action="Edit" asp-route-id="@item.SportEventId">Edit</a> |
                     <a class="btn btn-outline-info btn-sm" role="button" asp-action="Details" asp-route-id="@item.SportEventId">Details</a> |
-                    <a class="btn btn-outline-danger btn-sm" role="button" asp-action="Delete" asp-route-id="@item.SportEventId">Delete</a>
+                    <a class="btn btn-outline-danger btn-sm" role="button" asp-action="Delete" asp-route-id="@item.SportEventId">Delete</a> |
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a class="btn btn-outline-warning btn-sm" role="button" asp-controller="SportTicket" asp-action="Create" asp-route-id="@item.SportEventId">Buy Ticket</a>
+                    }
+                    else 
+                    {
+                        <p>Tickets are avaiable for authenticated users</p>    
+                    }
                 </td>
             </tr>
         }
