--- a/UtopiaCity/Views/CityAdministration/ResidentAccount/Details.cshtml
+++ b/UtopiaCity/Views/CityAdministration/ResidentAccount/Details.cshtml
@@ -10,43 +10,85 @@
     <h4>Account</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.FamilyName)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.FamilyName)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.BirthDate)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.Gender)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Gender)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.BirthPlace)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.BirthPlace)
+        </dd>
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.RegistrationAddress)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.RegistrationAddress)
+        </dd>
+        <dt class="col-sm-3">
             Marriage
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @{string person = Model.Marriage?.FirstPersonId == Model.Id ? Model.Marriage?.SecondPersonData ?? "No" : Model.Marriage?.FirstPersonData ?? "No";}
             @person
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-3">
             Date
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @{string date = Model.Marriage?.MarriageDate.ToShortDateString() ?? "No";}
             @date
+        </dd>
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.MedicalRecords)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.MedicalRecords)
+        </dd>
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.Property)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.Property)
+        </dd>
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.MotorTransport)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.MotorTransport)
+        </dd>
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.Phone)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.Phone)
         </dd>
     </dl>
 </div>
