--- a/UtopiaCity/Views/CityAdministration/_MyLayout.cshtml
+++ b/UtopiaCity/Views/CityAdministration/_MyLayout.cshtml
@@ -10,6 +10,7 @@
                 <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="CityAdministrationHome" asp-action="Index">Home</a></li>
                 <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="ResidentAccount" asp-action="Index">Residents accounts</a></li>
                 <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="Marriage" asp-action="Index">Marriage</a></li>
+                <li><a class="btn btn-primary" style="width:90%; margin:3px" asp-controller="RequestsConfirmation" asp-action="Index">Requests Confirmation</a></li>
             </ul>
         </div>
         <div class="col-sm-9" style="background-color:white; align-content:center;">
