I modified "SportTicketController" and Views of "Sport", "SportTicket", "SportComplex"  and "SportEvent". I added summaries for "SportEventService", "SportTicketService", "SportTicketModel". I created new "TaskListOfCititzensTask" in the "SportObjectsForTests". I removed unnecessary tests from "SportTicketControllerTests" and "SportTIcketServiceTests"

--- a/UtopiaCity/Views/SportComplex/Details.cshtml
+++ b/UtopiaCity/Views/SportComplex/Details.cshtml
@@ -53,5 +53,6 @@
 </div>
 <div>
     <a class="btn btn-outline-primary" role="button" asp-action="Edit" asp-route-id="@Model.SportComplexId">Edit</a> |
-    <a class="btn btn-outline-secondary" role="button" asp-action="AllSportComplexes">Back to List</a>
+    <a class="btn btn-outline-secondary" role="button" asp-action="AllSportComplexes">Sport Complexes</a> |
+    <a class="btn btn-outline-dark" role="button" asp-controller="SportEvent" asp-action="AllSportEvents">Sport Events</a>
 </div>
