--- a/UtopiaCity/Views/SportEvent/AllSportEvents.cshtml
+++ b/UtopiaCity/Views/SportEvent/AllSportEvents.cshtml
@@ -7,7 +7,8 @@
 <h1>AllSportEvents</h1>
 
 <p>
-    <a class="btn btn-outline-primary" role="button" asp-action="Create">Create New</a>
+    <a class="btn btn-outline-primary" role="button" asp-action="Create">Create New</a> |
+    <a class="btn btn-outline-dark" role="button" asp-controller="SportComplex" asp-action="AllSportComplexes">Sport Complexes</a>
 </p>
 <table class="table table-hover">
     <thead>
