--- a/UtopiaCity/Views/SportComplex/AllSportComplexes.cshtml
+++ b/UtopiaCity/Views/SportComplex/AllSportComplexes.cshtml
@@ -7,7 +7,8 @@
 <h1>AllSportComplexes</h1>
 
 <p>
-    <a class="btn btn-outline-primary" role="button" asp-action="Create">Create New</a>
+    <a class="btn btn-outline-primary" role="button" asp-action="Create">Create New</a> |
+    <a class="btn btn-outline-dark" role="button" asp-controller="SportEvent" asp-action="AllSportEvents">Sport Events</a>
 </p>
 <table class="table table-hover">
     <thead>
