--- a/UtopiaCity/Views/SportTicket/AllSportTickets.cshtml
+++ b/UtopiaCity/Views/SportTicket/AllSportTickets.cshtml
@@ -7,9 +7,9 @@
 <h1>AllSportTickets</h1>
 
 <p>
-    <a asp-controller="SportEvent" asp-action="AllSportEvents">Sport events</a>
+    <a class="btn btn-outline-primary" role="button" asp-controller="SportEvent" asp-action="AllSportEvents">Sport events</a>
 </p>
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -57,9 +57,8 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <td>
-                    @*<a asp-action="Edit" asp-route-id="@item.SportTicketId">Edit</a> |*@
-                    <a asp-action="Details" asp-route-id="@item.SportTicketId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.SportTicketId">Delete</a>
+                    <a class="btn btn-outline-info btn-sm" role="button" asp-action="Details" asp-route-id="@item.SportTicketId">Details</a> |
+                    <a class="btn btn-outline-danger btn-sm" role="button" asp-action="Delete" asp-route-id="@item.SportTicketId">Delete</a>
                 </td>
             }
             else
