--- a/UtopiaCity/Views/SportTicket/Details.cshtml
+++ b/UtopiaCity/Views/SportTicket/Details.cshtml
@@ -10,27 +10,44 @@
     <h4>SportTicket</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SportComplexTitle)
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.SportEventTitle)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.SportEventTitle)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.DateOfTheEvent)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.DateOfTheEvent)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.SportComplexTitle)
+        </dt>
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.SportComplexTitle)
+        </dd>
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.VisitorName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.VisitorName)
+        </dd>
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.VisitorSurname)
+        </dt>
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.VisitorSurname)
         </dd>
     </dl>
 </div>
 <div>
-    @*<a asp-action="Edit" asp-route-id="@Model.SportTicketId">Edit</a> |*@
-    <a asp-action="AllSportTickets">Back to List</a>
+    <a class="btn btn-outline-secondary" role="button" asp-action="AllSportTickets">Back to List</a>
 </div>
