--- a/UtopiaCity/Views/SportComplex/Details.cshtml
+++ b/UtopiaCity/Views/SportComplex/Details.cshtml
@@ -43,6 +43,12 @@
                     <dd class="col-sm-8">
                         @Html.DisplayFor(model => model.Address)
                     </dd>
+                    <dt class="col-sm-4">
+                        @Html.DisplayNameFor(model => model.Available)
+                    </dt>
+                    <dd class="col-sm-8">
+                        @Html.DisplayFor(model => model.Available)
+                    </dd>
                 </dl>
             </div>
             <div class="col text-center">
