--- a/UtopiaCity/Views/Ticket/TicketsListView.cshtml
+++ b/UtopiaCity/Views/Ticket/TicketsListView.cshtml
@@ -44,10 +44,18 @@
                     @Html.DisplayFor(modelItem => item.Direction)
                 </td>
                 <td>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>                    
                 </td>
             </tr>
         }
     </tbody>
 </table>
+<a asp-controller="Passenger" asp-action="CreateDepartedPassengers">
+    <div class="form-group">
+        <input type="submit" value="Send Passenger" class="btn btn-primary" />
+    </div>
+</a>
+<p>
+    <a asp-controller="Passenger" asp-action="ListOfDeparted">List Of Departed</a>
+</p>
 
