--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -48,8 +48,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Life" asp-action="Index">Life</a>
-                        </li>
-                        <li class="nav-item">*@
+                        </li>*@
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="EmergencyReportPartial" asp-action="Index">BIG TEST VALUE</a>
                         </li>
                         <li class="nav-item">
