--- a/UtopiaCity/Views/Home/Index.cshtml
+++ b/UtopiaCity/Views/Home/Index.cshtml
@@ -1,9 +1,22 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.Extensions.Options
+
 @inject IViewLocalizer Localizer
+@inject IOptions<RequestLocalizationOptions> LocOptions
 
 @{
     ViewData["Title"] = "HomePageMessage";
+    var requestCulture = Context.Features.Get<IRequestCultureFeature>();
+    var cultureItems = LocOptions.Value.SupportedUICultures.Select(c => new SelectListItem { Value = c.Name, Text = c.NativeName }).ToList();
 }
+
+<form asp-controller="Home" asp-action="SetLanguage" method="post" asp-route-returnUrl="@Context.Request.Path">
+    Language: <select name="culture" onchange="this.form.submit();" 
+                      asp-for="@requestCulture.RequestCulture.UICulture.Name"
+                      asp-items="cultureItems"></select>
+</form>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
