--- a/UtopiaCity/Views/CityAdministration/ResidentAccount/Index.cshtml
+++ b/UtopiaCity/Views/CityAdministration/ResidentAccount/Index.cshtml
@@ -51,3 +51,6 @@
 }
     </tbody>
 </table>
+<p>
+    <a asp-controller="Passenger" asp-action="ListOfArrivals">List Of Arriving Passengers</a>
+</p>
