Added new static class into "Common" folder for getting information about authenticated users. Corrected names of some variables. Fixed intendations in the "SportObjectsForTests" class

--- a/UtopiaCity/Views/RequestToAdministration/AllRequestsToAdministration.cshtml
+++ b/UtopiaCity/Views/RequestToAdministration/AllRequestsToAdministration.cshtml
@@ -74,7 +74,7 @@
     </tbody>
 </table>
 
-@if (ViewBag.IsMainPage)
+@if (ViewBag.IsAllRequestToAdministrationPrinted)
 {
     <div class="row">
         <div class="w-50">
