Fixed my Initial Branch

--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="CitizensAccount" asp-action="ShowUserCabinet">Citizen's Account</a>
 
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HousingSystem" asp-action="Index">Housing System</a>
+                        </li>
                     </ul>
                 </div>
             </div>
