--- a/UtopiaCity/Views/Home/Index.cshtml
+++ b/UtopiaCity/Views/Home/Index.cshtml
@@ -3,6 +3,14 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">
+        Welcome
+    </h1>
+   
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+<div class="text-left">
+    <h4>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Clinic" asp-action="Index">Clinic</a>
+    </h4>
 </div>
