--- a/UtopiaCity/Views/ClinicVisit/CreateClinicVisitView.cshtml
+++ b/UtopiaCity/Views/ClinicVisit/CreateClinicVisitView.cshtml
@@ -1,20 +1,20 @@
-﻿@model UtopiaCity.Models.Clinic.ClinicReport
+﻿@model UtopiaCity.Models.Clinic.ClinicVisit
 @addTagHelper *, UtopiaCity
 
 @{
-    ViewData["Title"] = "CreateClinicReportView";
+    ViewData["Title"] = "CreateClinicVisitView";
 }
 
-<h1>CreateClinicReportView</h1>
+<h1>CreateClinicVisitView</h1>
 
-<h4>ClinicReport</h4>
+<h4>ClinicVisit</h4>
 <p>
     Time is - <time></time>
 </p>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateClinicReportView">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @*<div class="form-group">
             <label asp-for="Id" class="control-label"></label>
@@ -22,14 +22,14 @@
             <span asp-validation-for="Id" class="text-danger"></span>
         </div>*@
             <div class="form-group">
-                <label asp-for="Report" class="control-label"></label>
-                <input asp-for="Report" class="form-control" />
-                <span asp-validation-for="Report" class="text-danger"></span>
+                <label asp-for="Visit" class="control-label"></label>
+                <input asp-for="Visit" class="form-control" />
+                <span asp-validation-for="Visit" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ReportTime" class="control-label"></label>
-                <input asp-for="ReportTime" class="form-control" />
-                <span asp-validation-for="ReportTime" class="text-danger"></span>
+                <label asp-for="VisitTime" class="control-label"></label>
+                <input asp-for="VisitTime" class="form-control" />
+                <span asp-validation-for="VisitTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
