--- a/UtopiaCity/Views/ClinicVisit/DeleteClinicVisitView.cshtml
+++ b/UtopiaCity/Views/ClinicVisit/DeleteClinicVisitView.cshtml
@@ -1,31 +1,31 @@
-﻿@model UtopiaCity.Models.Clinic.ClinicReport
+﻿@model UtopiaCity.Models.Clinic.ClinicVisit
 
 @{
-    ViewData["Title"] = "DeleteClinicReportView";
+    ViewData["Title"] = "DeleteClinicVisitView";
 }
 
-<h1>DeleteClinicReportView</h1>
+<h1>DeleteClinicVisitView</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ClinicReport</h4>
+    <h4>ClinicVisit</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Report)
+            @Html.DisplayNameFor(model => model.Visit)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Report)
+            @Html.DisplayFor(model => model.Visit)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReportTime)
+            @Html.DisplayNameFor(model => model.VisitTime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReportTime)
+            @Html.DisplayFor(model => model.VisitTime)
         </dd>
     </dl>
     
-    <form asp-action="DeleteClinicReportView">
+    <form asp-action="DeleteClinicVisitView">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
