--- a/UtopiaCity/Views/Home/Index.cshtml
+++ b/UtopiaCity/Views/Home/Index.cshtml
@@ -11,6 +11,6 @@
 </div>
 <div class="text-left">
     <h4>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Clinic" asp-action="Index">Clinic</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="ClinicVisit" asp-action="Index">Clinic Visits</a>
     </h4>
 </div>
