--- a/UtopiaCity/Views/HousingSystem/CreateRealEstateView.cshtml
+++ b/UtopiaCity/Views/HousingSystem/CreateRealEstateView.cshtml
@@ -1,47 +1,65 @@
-﻿@model UtopiaCity.Models.HousingSystem.RealEstate
+﻿@model UtopiaCity.ViewModels.HousingSystem.AddRealEstateViewModel
+
 @using UtopiaCity.Models.HousingSystem
+@using UtopiaCity.ViewModels.HousingSystem
+@using System.Linq.Expressions
 @{
     ViewData["Title"] = "CreateRealEstateView";
 }
-
 <h1>CreateRealEstateView</h1>
 
 <h4>RealEstate</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <label asp-for="Street" class="control-label"></label>
-                <input asp-for="Street" class="form-control" />
-                <span asp-validation-for="Street" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Number" class="control-label"></label>
-                <input asp-for="Number" class="form-control" />
-                <span asp-validation-for="Number" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CompletionYear" class="control-label"></label>
-                <input asp-for="CompletionYear" class="form-control" />
-                <span asp-validation-for="CompletionYear" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EstateType" class="control-label"></label>
-                <select asp-for="EstateType" asp-items="Html.GetEnumSelectList<RealEstateType>()" class="form-control"></select>
-                <span asp-validation-for="EstateType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="col-md-6">
+        <div class="card card-body bg-light">
+            <form asp-action="Create" method="post">
+                @using (Html.BeginForm())
+                {
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    @*<div class="form-group">
+                            <label asp-for="Id" class="control-label"></label>
+                            <input asp-for="Id" class="form-control" />
+                            <span asp-validation-for="Id" class="text-danger"></span>
+                        </div>*@
+                    <div class="form-group">
+                        <label asp-for="Street" class="control-label"></label>
+                        <input asp-for="Street" class="form-control" />
+                        <span asp-validation-for="Street" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Number" class="control-label"></label>
+                        <input asp-for="Number" class="form-control" />
+                        <span asp-validation-for="Number" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CompletionYear" class="control-label"></label>
+                        <input asp-for="CompletionYear" class="form-control" />
+                        <span asp-validation-for="CompletionYear" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="EstateType" class="control-label"></label>
+                        <select asp-for="EstateType" asp-items="Html.GetEnumSelectList<RealEstateType>()" class="form-control"></select>
+                        <span asp-validation-for="EstateType" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ResidentAccount" class="control-label"></label>
+                        @*<select asp-for="ResidentAccount" asp-items="@Html.DropDownListFor((IEnumerable<dynamic>)Model.Residents, ViewBag.Zb, "Set the Owner", new { @class = "foo"})"
+                                class="form-control"></select>
+                        <span asp-validation-for="ResidentAccount" class="text-danger"></span>*@
+                    <select asp-for="ResidentAccount" asp-items="@ViewBag.Selectlist" , new { class="foo" })" class="form-control"></select>
+                        <span asp-validation-for="ResidentAccount" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" name="name" value="Create" />
+                        <div class="text-success">@ViewBag.UserMessage</div>
+                    </div>
+                }
+
+            </form>
+        </div>
     </div>
+    <div class="col-md-6"> <img src="~/images/HousingSystem/BackGround.jpg" alt="Alternate Text" style="width: auto" /> </div>
 </div>
 
 <div>
@@ -49,5 +67,8 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
