--- a/UtopiaCity/Views/HousingSystem/RealEstateListView.cshtml
+++ b/UtopiaCity/Views/HousingSystem/RealEstateListView.cshtml
@@ -24,7 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.EstateType)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.ResidentAccount)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -41,6 +43,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EstateType)
+            </td>
+            <td>
+                @Html.DisplayNameFor(model => model.ResidentAccount)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
